--- a/src/main/resources/templates/admin/chefs.html
+++ b/src/main/resources/templates/admin/chefs.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco chef</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -24,6 +24,7 @@
 			</tr>
 		</table>
 		</p>
+		<a href="admin/chefForm" th:href="@{/admin/chef}">Inserisci uno chef</a>
 	</div>
 	<footer>
 		<div>
