--- a/src/main/resources/templates/admin/ingrediente.html
+++ b/src/main/resources/templates/admin/ingrediente.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Dettagli ingrediente</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
