--- a/src/main/resources/templates/admin/piatti.html
+++ b/src/main/resources/templates/admin/piatti.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Elenco piatti</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -26,6 +26,7 @@
 			</tr>
 		</table>
 		</p>
+		<a href="admin/piattoForm" th:href="@{/admin/piatto}">Inserisci un piatto</a>
 	</div>
 	<footer>
 		<div>
