--- a/src/main/resources/templates/user/menuUser.html
+++ b/src/main/resources/templates/user/menuUser.html
@@ -14,19 +14,19 @@
 			<h1>Menù utente</h1>
 		</thead>
 		<tr>
-			<td>Consulta la lista dei buffet disponibili: </td>
+			<td>Trova il buffet per te </td>
 			<td><a href="user/buffet" th:href="@{/user/buffets}">Elenco buffet</a></td>
 		</tr>
 		<tr>
-			<td>Consulta la lista degli chef che collaborano con noi: </td>
+			<td>Conosci la sapiente esperienza dei nostri chef </td>
 			<td><a href="user/chef" th:href="@{/user/chefs}">Elenco chef</a></td>
 		</tr>
 		<tr>
-			<td>Consulta la lista dei piatti offerti: </td>
+			<td>Scegli tra i piatti in base alla stagionalità e alla disponibilità </td>
 			<td><a href="user/piatto" th:href="@{/user/piatti}">Elenco piatti</a></td>
 		</tr>
 		<tr>
-			<td>Consulta la lista degli ingredienti utilizzati: </td>
+			<td>Sapori e colori con ingredienti di prima qualità </td>
 			<td><a href="user/ingrediente" th:href="@{/user/ingredienti}">Elenco ingredienti</a></td>
 		</tr>
 	</table>
