--- a/src/main/resources/templates/user/registerUser.html
+++ b/src/main/resources/templates/user/registerUser.html
@@ -37,11 +37,12 @@
 					<td th:if="${#fields.hasErrors('user.cognome')}" th:errors="${user.cognome}" th:style="'color:red'">
 					</td>
 				</tr>
+				<tr>
+					<td></td>
+					<td><button type="submit">Registra</button></td>
+				</tr>
 			</table>
 			<p>
-			<div>
-				<span><button type="submit">Registra</button></span>
-			</div>
 		</form>
 	</div>
 	<footer>
