--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -3,8 +3,8 @@ h1, h2 {
 }
 
 body {
-  	font-family: Comic;
-  	background-color: white;
+	background:cornflowerblue;
+  	font-family: Helvetica;
 }
 
 #image {
@@ -25,6 +25,30 @@ td {
 	padding-right: 20px;
 }
 
+input {
+	font-size: inherit;
+}
+
+button {
+	font-size: inherit;
+}
+
+a.button {
+	font-size: inherit;
+	padding-top: -10px;
+	padding-bottom: -10px;
+	margin-left: 15px;
+	color: black;
+	border: solid;
+    background-color: lightgrey;
+    text-decoration: inherit;
+}
+
 .text-center {
 	text-align: center;
+}
+
+footer {
+	text-align:justify;
+	font-size: 80%;
 }
