--- a/src/main/resources/templates/admin/aggiungiBuffetAlloChef.html
+++ b/src/main/resources/templates/admin/aggiungiBuffetAlloChef.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Aggiungi buffet allo chef</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -28,6 +28,9 @@
 		</form>
 	</div>
 	<footer>
+		<div>
+			<a th:href="@{'/admin/chef' + '/' + ${chef.id}}" th:text="Torna + ' ' + allo + ' ' + chef + ' ' + ${chef.cognome}"></a>
+		</div>
 		<div>
 			<a href="/admin/chefs">Torna all'elenco degli chef</a>
 		</div>
