--- a/src/main/resources/templates/admin/chefForm.html
+++ b/src/main/resources/templates/admin/chefForm.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Inserimento chef</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -18,12 +18,12 @@
 			</tr>
 			<tr>
 				<td>Nome</td>
-				<td><input type="text" th:field="*{nome}" /></td>
+				<td><input type="text" required th:field="*{nome}" /></td>
 				<span th:if="${#fields.hasErrors('nome')}" th:errors="*{nome}"></span>
 			</tr>
 			<tr>
 				<td>Cognome</td>
-				<td><input type="text" th:field="*{cognome}" /></td>
+				<td><input type="text" required th:field="*{cognome}" /></td>
 				<span th:if="${#fields.hasErrors('cognome')}" th:errors="*{cognome}"></span>
 			</tr>
 			<tr>
@@ -39,6 +39,9 @@
 		</p>
 	</form>
 	<footer>
+		<div>
+			<a href="/admin/chefs">Elenco degli chef</a>
+		</div>
 		<div>
 			<a href="/menu">Torna al menù amministratore</a>
 		</div>
