--- a/src/main/resources/templates/admin/confermaCancellazioneBuffet.html
+++ b/src/main/resources/templates/admin/confermaCancellazioneBuffet.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Conferma cancellazione buffet</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 		</div>
 		</p>
 		<p>
-			<strong>Confermi di voler cancellare questo buffet?</strong>
+			<strong>Confermi di voler cancellare questo buffet ?</strong>
 			<a class="button" href="admin/buffets.html" th:href="@{'/admin/confirmDeleteBuffet'+ '/' + ${buffet.id}}"
 				th:text="Conferma">Conferma</a>
 		</p>
