--- a/src/main/resources/templates/admin/confermaCancellazioneIngrediente.html
+++ b/src/main/resources/templates/admin/confermaCancellazioneIngrediente.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Conferma cancellazione ingrediente</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 		</div>
 		</p>
 		<p>
-			<strong>Confermi di voler cancellare quest'ingrediente?</strong>
+			<strong>Confermi di voler cancellare quest'ingrediente ?</strong>
 			<a class="button" href="admin/ingredienti.html"
 				th:href="@{'/admin/confirmDeleteIngrediente'+ '/' + ${ingrediente.id}}" th:text="Conferma">Conferma</a>
 		</p>
