--- a/src/main/resources/templates/admin/confermaCancellazionePiatto.html
+++ b/src/main/resources/templates/admin/confermaCancellazionePiatto.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Conferma cancellazione piatto</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 		</div>
 		</p>
 		<p>
-			<strong>Confermi di voler cancellare questo piatto?</strong>
+			<strong>Confermi di voler cancellare questo piatto ?</strong>
 			<a class="button" href="admin/piatti.html" th:href="@{'/admin/confirmDeletePiatto'+ '/' + ${piatto.id}}"
 				th:text="Conferma">Conferma</a>
 		</p>
