--- a/src/main/resources/templates/admin/piattoForm.html
+++ b/src/main/resources/templates/admin/piattoForm.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Inserimento piatto</title>
-	<link rel="stylesheet" href="/css/buffet.css" />
+	<link rel="stylesheet" href="/css/admin.css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 			</tr>
 			<tr>
 				<td>Nome</td>
-				<td><input type="text" th:field="${piatto.nome}" /></td>
+				<td><input type="text" required th:field="${piatto.nome}" /></td>
 				<span th:if="${#fields.hasErrors('nome')}" th:errors="*{piatto.nome}"></span>
 			</tr>
 			<tr>
@@ -34,6 +34,9 @@
 		</p>
 	</form>
 	<footer>
+		<div>
+			<a href="/admin/piatti">Elenco dei piatti</a>
+		</div>
 		<div>
 			<a href="/menu">Torna al menù amministratore</a>
 		</div>
