--- a/src/main/resources/templates/admin/confermaCancellazionePiatto.html
+++ b/src/main/resources/templates/admin/confermaCancellazionePiatto.html
@@ -10,7 +10,7 @@
 <body>
 	<div>
 		<h1>Piatto da cancellare</h1>
-		<img src="/images/piatto.jpg" alt="A course" width="70%" />
+		<img src="/images/piatto2.jpg" alt="A course" width="70%" />
 		<p>
 		<div>
 			<!-- <span>Nome: </span> -->
@@ -28,6 +28,7 @@
 		</p>
 	</div>
 	<footer>
+		<p>
 		<div>
 			<a href="/admin/piatti">Torna all'elenco dei piatti</a>
 		</div>
@@ -37,6 +38,7 @@
 		<div>
 			<a href="/">Torna alla home</a>
 		</div>
+		</p>
 	</footer>
 </body>
 
