--- a/src/main/resources/templates/user/menuUser.html
+++ b/src/main/resources/templates/user/menuUser.html
@@ -31,10 +31,11 @@
 		</tr>
 	</table>
 	</p>
-	<p>
-		<a th:href="@{/logout}">Logout</a>
-	</p>
-
+	<footer>
+		<p>
+			<a th:href="@{/logout}">Logout</a>
+		</p>
+	</footer>
 </body>
 
 </html>
