--- a/src/main/resources/templates/user/piatto.html
+++ b/src/main/resources/templates/user/piatto.html
@@ -10,7 +10,7 @@
 <body>
 	<div>
 		<h1>Dettagli piatto</h1>
-		<img src="/images/piatto.jpg" alt="A course" width="70%" />
+		<img src="/images/piatto2.jpg" alt="A course" width="70%" />
 		<p>
 		<div>
 			<!-- <span>Nome: </span> -->
@@ -50,6 +50,7 @@
 		</p>
 	</div>
 	<footer>
+		<p>
 		<div>
 			<a href="/user/piatti">Torna all'elenco dei piatti</a>
 		</div>
@@ -59,6 +60,7 @@
 		<div>
 			<a href="/">Torna alla home</a>
 		</div>
+		</p>
 	</footer>
 </body>
 
