--- a/src/main/resources/templates/admin/piatti.html
+++ b/src/main/resources/templates/admin/piatti.html
@@ -10,7 +10,7 @@
 <body>
 	<div>
 		<h1>Elenco piatti</h1>
-		<img src="/images/piatto.jpg" alt="A course" width="70%" />
+		<img src="/images/piatto2.jpg" alt="A course" width="70%" />
 		<p>
 		<table>
 			<thead th:unless="${piatti.isEmpty()}">PIATTI</thead>
@@ -20,8 +20,8 @@
 				<!--- <td><a href="confermaCancellazionePiatto.html" th:href="@{'/admin/toDeletePiatto' + '/' + ${piatto.id}}"
 					th:text="Cancella">Cancella</a></td> -->
 				<td>
-					<a class="button" href="confermaCancellazionePiatto.html" th:href="@{'/admin/toDeletePiatto' + '/' + ${piatto.id}}"
-					th:text="Cancella">Cancella</a>
+					<a class="button" href="confermaCancellazionePiatto.html"
+						th:href="@{'/admin/toDeletePiatto' + '/' + ${piatto.id}}" th:text="Cancella">Cancella</a>
 				</td>
 			</tr>
 		</table>
@@ -29,12 +29,14 @@
 		<a href="admin/piattoForm" th:href="@{/admin/piatto}">Inserisci un piatto</a>
 	</div>
 	<footer>
+		<p>
 		<div>
 			<a href="/menu">Torna al menù amministratore</a>
 		</div>
 		<div>
 			<a href="/">Torna alla home</a>
 		</div>
+		</p>
 	</footer>
 </body>
 
