--- a/src/main/resources/templates/user/piatti.html
+++ b/src/main/resources/templates/user/piatti.html
@@ -10,25 +10,27 @@
 <body>
 	<div>
 		<h1>Elenco piatti</h1>
-		<img src="/images/piatto.jpg" alt="A course" width="70%" />
+		<img src="/images/piatto2.jpg" alt="A course" width="70%" />
 		<p>
 		<table>
 			<thead th:unless="${piatti.isEmpty()}">PIATTI</thead>
 			<tr th:each="piatto : ${piatti}">
-				<td><a href="user/piatto.html"
-						th:href="@{'/user/piatto' + '/' + ${piatto.id}}" th:text="${piatto.nome}">Piatto di prova</a>
+				<td><a href="user/piatto.html" th:href="@{'/user/piatto' + '/' + ${piatto.id}}"
+						th:text="${piatto.nome}">Piatto di prova</a>
 				</td>
 			</tr>
 		</table>
 		</p>
 	</div>
 	<footer>
+		<p>
 		<div>
 			<a href="/menu">Torna al menù utente</a>
 		</div>
 		<div>
 			<a href="/">Torna alla home</a>
 		</div>
+		</p>
 	</footer>
 </body>
 
